{
  "myTasks": "Мои дела",
  "done": "Выполнено",
  "new": "Новое",
  "save": "СОХРАНИТЬ",
  "whatToDo": "Что надо сделать...",
  "importance": "Важность",
  "none": "Нет",
  "low": "Низкий",
  "high": "Высокий",
  "doTill": "Сделать до",
  "delete": "Удалить"
}